assets/css/style.css
  /* Google fonts import */
  @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');

  /* Asterisk wildcard selector to override default styles added by the browser. */
  * {
    padding: 0;
    margin: 0;
    box-sizing: border-box;

  }

  /* General styles */

  body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    color: #3a3a3a;
    font-family: 'Lato', sans-serif;
  }

  /* Header */
  header {
    background-color: #FFFFFF;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #3a3a3a;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
  }

  header a {
    text-decoration: none;
    color: inherit;
  }

  h1 {
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #252525;
  }

  /* Targets menu */
  #menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style-type: none;


  }

  /* Targets space between menu items */

  #menu>li {
    margin-bottom: 1em;
  }

  .active {
    border-bottom: 1px solid #3a3a3a;
  }

  /* Navbar styles with dropdown toggle */
  nav {
    position: absolute;
    background-color: #FFFFFF;
    width: 100%;
    box-shadow: 0 2px 2px #3a3a3a;
    left: 0;
    padding: 0 1rem;
    display: none; /* hides nav bar */
    top: 100%; /* makes it so the logo appears on top still */
  }

  /* Nav toggle */

  #nav-toggle:checked~nav {
    display: block;
    
  }

  #nav-toggle {
    display: none;
  }

  .nav-toggle-label {
    font-size: 2rem ;
  }

  /* Main content*/
  main {
    background-color: lightblue;
    /* Make main element take up any surplus space to push footer down */
    flex: 1 0 auto;
  }


  /* Footer */
  footer {
    background-color: orange;
  }

